Miscellaneous minor code cleanups.
Use 'int' where 'Integer' is unecessary, use Integer.valueOf instead of
new Integer where it is, remove some unused declarations/imports, and
add some allowable 'final' modifiers.